--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.1.6",
     "moment": "2.29.4",
     "next": "13.1.6",
+    "next-pwa": "^5.6.0",
     "nouislider": "14.5.0",
     "react": "18.2.0",
     "react-datetime": "3.1.1",
