--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "bootstrap": "4.6.0"
+    "bootstrap": "4.6.0",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-datetime": "3.1.1",
     "react-dom": "18.2.0",
+    "react-google-forms-hooks": "^1.2.4",
     "reactstrap": "8.9.0",
     "sass": "1.53.0",
     "typescript": "4.9.5"
