--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-datetime": "3.1.1",
     "react-dom": "18.2.0",
     "react-google-forms-hooks": "^1.2.4",
+    "react-text-transition": "^3.0.2",
     "reactstrap": "8.9.0",
     "sass": "1.53.0",
     "typescript": "4.9.5"
